# rwasm

./: .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  rust-toolchain
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  clippy.yml  coverage.yml  publish.yml
benches/: bench.rs
benchmarks/: .gitignore  Cargo.toml  Makefile  README.md  bench.rs  fibonacci-program  keccak-elf  lib.rs  rust-toolchain  test.rs
benchmarks/.cargo/: config.toml
benchmarks/benches/: bench.rs  bitvec.rs  compilation.rs  fib256.rs  fib32.rs  fib64.rs  fibonachi.rs  parsing.rs
codegen/: Cargo.toml
codegen/src/: constants.rs  instruction_set.rs  lib.rs  platform.rs  reduced_module.rs  tests.rs
codegen/src/binary_format/: drop_keep.rs  instruction.rs  instruction_set.rs  mod.rs  module.rs  number.rs  reader_writer.rs  utils.rs
codegen/src/compiler/: compiler.rs  config.rs  drop_keep.rs  mod.rs  types.rs
codegen/src/reduced_module/: encoder.rs  module.rs  reader.rs  types.rs
crates/gas-meter/: Cargo.toml
crates/gas_meter/: Cargo.toml
docs/: PHASE-1-AUDIT.md  README.md  SUMMARY.md  architecture.md  contributor-guide.md  module-format.md  opcodes.md  pipeline.md  security-considerations.md  vm-and-fuel.md
docs/encoding/: instruction.md  module.md
docs/instructions/: 00_unreachable.md  01_local_get.md  01_trap.md  02_local_set.md  03_local_tee.md  04_br.md  05_br_if.md  06_br_if_nez.md  10_consume_fuel.md  11_return.md  12_return_if_nez.md  13_return_call_internal.md  14_return_call.md  15_return_call_indirect.md  16_call_internal.md  17_call.md  18_call_indirect.md  19_signature_check.md  20_drop.md  21_select.md  22_global_get.md  23_br_table.md  23_global_set.md  24_i32_load.md  31_consume_fuel_stack.md  47_memory_size.md  48_memory_grow.md  49_memory_fill.md  50_memory_copy.md  51_memory_init.md  51_stack_check.md  52_data_drop.md  53_table_size.md  54_table_grow.md  55_table_fill.md  56_table_get.md  57_table_set.md  58_table_copy.md  59_table_init.md  60_element_drop.md  (+56 more)
e2e/: Cargo.toml
e2e/src/: context.rs  descriptor.rs  error.rs  group.rs  handler.rs  import_linker.rs  lib.rs  run.rs
examples/fib/: Cargo.toml  build.rs  lib.rs  main.rs
examples/wasm/: .gitignore  Cargo.toml  lib.rs
executor/: Cargo.toml
executor/src/: executor.rs  instruction_table.rs  memory.rs  module.rs  opcodes.rs
executor/src/binary_format/: instruction.rs
fib/: Cargo.toml  Makefile  bench.rs  greeting-elf  lib.rs  test.rs
fuzz/: Cargo.toml  Makefile  README.md
fuzz/fuzz_targets/: differential.rs
gas-injector/: Cargo.toml
gas-injector/src/: cost_model.rs  lib.rs  tests.rs
gas-meter/: Cargo.toml
gas-meter/src/: lib.rs
legacy/: Cargo.toml
legacy/src/: externref.rs  global.rs  lib.rs  limits.rs  linker.rs
perf/: Cargo.toml  Makefile  evm_fibonacci_perf.rs  fibonacci_perf.rs  fibonacci_perf32.rs  fibonacci_perf32_wasmtime.rs  fibonacci_perf64.rs  load_perf.rs  perf1.rs
rwasm/: Cargo.toml  README.md
rwasm/src/: externref.rs  lib.rs  linker.rs  reftype.rs  store.rs  types.rs  value.rs
rwasm/src/arena/: component_vec.rs  mod.rs
rwasm/src/common/: host_error.rs  trap.rs  untyped.rs  value.rs
rwasm/src/core/: host_error.rs  import_linker.rs  mod.rs  nan_preserving_float.rs  rwasm.rs  trap.rs  units.rs  untyped.rs  value.rs
rwasm/src/engine/: cache.rs  code_map.rs  config.rs  const_pool.rs  executor.rs  func_args.rs  func_types.rs  mod.rs  tests.rs  tracer.rs  traits.rs
rwasm/src/engine/bytecode/: instr_meta.rs  mod.rs  stack_height.rs  utils.rs
rwasm/src/engine/func_builder/: control_frame.rs  inst_builder.rs  labels.rs  mod.rs  rwasm.rs  translator.rs  translator_i32.rs
rwasm/src/engine/stack/: mod.rs
rwasm/src/engine/stack/values/: mod.rs  sp.rs
rwasm/src/executor/: mod.rs  opcodes.rs
rwasm/src/func/: caller.rs  func_type.rs  funcref.rs  into_func.rs  mod.rs  typed_func.rs
rwasm/src/instance/: exports.rs
rwasm/src/memory/: data.rs
rwasm/src/module/: builder.rs  element.rs  error.rs  export.rs  import.rs  init_expr.rs  mod.rs  parser.rs  read.rs  utils.rs
rwasm/src/module/compile/: block_type.rs  mod.rs  rwasm.rs
rwasm/src/module/instantiate/: mod.rs  tests.rs
rwasm/src/rwasm/: drop_keep.rs  instruction_set.rs  mod.rs  module_builder.rs  reduced_module.rs  segment_builder.rs  tests.rs  translator.rs  types.rs
rwasm/src/rwasm/binary_format/: drop_keep.rs  inscode.rs  instruction.rs  instruction_set.rs  mod.rs  module.rs  number.rs  reader_writer.rs  utils.rs
rwasm/src/rwasm/compiler/: compiler.rs  config.rs  drop_keep.rs
rwasm/src/table/: element.rs  mod.rs
rwasm_optimization/: Cargo.toml  Makefile
rwasm_optimization/src/: allocator_and_panic.rs  lib.rs
snippets/: Cargo.toml  Makefile  extractor.rs  fuzz.rs  i64_add.rs  i64_div_s.rs  i64_div_u.rs  i64_mul.rs  i64_ne.rs  i64_rem_s.rs  i64_rem_u.rs  i64_rotl.rs  i64_rotr.rs  i64_shl.rs  i64_shr_s.rs  i64_shr_u.rs  i64_sub.rs  lib.rs  lib.wasm  lib.wat  rwasm.rs  test.rs  tests.rs
src/: compiler.rs  legacy.rs  lib.rs  module.rs  strategy.rs  wasmi.rs
src/binary_format/: instruction_set.rs  mod.rs  module.rs
src/compiler/: block_fuel.rs  builder.rs  compiled_expr.rs  compiler.rs  config.rs  control_flow.rs  drop_keep.rs  entrypoint.rs  error.rs  fuel_costs.rs  func_builder.rs  func_translator.rs  func_type_registry.rs  init_expr.rs  instr_loc.rs  intrinsic.rs  labels.rs  locals_registry.rs  mod.rs  parser.rs  segment_builder.rs  snippets.rs  tests.rs  translator.rs  utils.rs  value_stack.rs
src/evm/: mod.rs
tests/: basic.rs  compiler.rs  fib256.rs  fluentbase.rs  fpu.rs  fuel.rs  fuzz.rs  fuzz_versions.rs  interruption.rs  intrinsic.rs  lib.rs  locals.rs  memory.rs  nitro-verifier.rs  nitro.rs  panic.rs  snippets.rs  stack-overflow.rs  stack-ub.rs  wasmi.rs  wasmtime.rs  wasmtime_fpu.rs
tests/nitro-verifier/: Cargo.toml  Makefile  build.rs  lib.rs  lib.wasm
trace-extractor/: Cargo.toml
trace-extractor/evm-machine/: Cargo.toml  Makefile  lib.rs
wasm/: Cargo.toml  Makefile  build.rs  fib.wasm  lib.rs
(+182 files in other folders)
