[package]
name = "fluent-rwasm"
edition = "2021"
authors = [
    "Dmitry Savonin <dmitry@fluentlabs.xyz>",
]
repository = "https://github.com/fluentlabs-xyz/rwasm"
readme = "README.md"
license = "MIT"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]
publish = true
version = "0.1.0"

[dependencies]
wasmparser = { version = "0.100.1", package = "wasmparser-nostd", default-features = false }
hashbrown = { version = "0.15.2", features = ["alloc"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
paste = { version = "1.0", default-features = false }
bytes = { version = "1.10.1", default-features = false }
downcast-rs = { version = "2.0.1", default-features = false, features = ["sync"] }
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "derive"] }
num-traits = { version = "0.2", default-features = false }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
libm = "0.2.1"
smallvec = "1.15.0"
num-derive = "0.4.2"
spin = "0.10.0"
fnv = { version = "1.0.7", default-features = false }

# tracing
serde = { version = "1.0.219", features = ["derive"], optional = true }

# wasmtime
wasmtime = { version = "34.0.1", package = "wasmtime-rwasm", optional = true, features = ["disable-fpu", "cache"] }
#wasmtime = { path = "../wasmtime/crates/wasmtime", optional = true, features = ["disable-fpu", "cache"] }

anyhow = { version = "1.0.98", default-features = false, optional = true }
directories = { version = "6.0.0", optional = true }
futures = { version = "0.3.31", optional = true }
cfg-if = "1.0.4"

# wasmi
wasmi = { version = "0.47.0", default-features = false }

# unix-memory
libc = { version = "0.2.172", default-features = false, features = ["align", "extra_traits", "const-extern-fn"], optional = true }

[dev-dependencies]
rand = "0.9.1"
wat = "1.230.0"
hex-literal = "1.0.0"

[features]
default = ["std", "wasmtime"]
std = [
    "bytes/std",
    "bincode/std",
    "num-traits/std",
    "bitvec/std",
    "wasmtime?/std",
    "unix-memory",
    "pooling-allocator",
]
more-max-pages = []
serde = [
    "dep:serde", "serde/derive"
]
tracing = ["serde"]
test-build = []
debug-print = ["std"]
fpu = []
wasmtime = ["dep:wasmtime", "dep:anyhow", "dep:futures"]
cache-compiled-artifacts = ["wasmtime", "dep:directories"]
pooling-allocator = []
unix-memory = ["dep:libc"]

[[test]]
name = "integration"
path = "tests/snippets.rs"
required-features = ["test-build"]
