[package]
name = "rwasm"
version = "0.4.3"
edition = "2021"
description = "ZK-friendly WebAssembly runtime optimized for blockchain and zero-knowledge applications"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fluentlabs-xyz/rwasm"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]
authors = ["Dmitry Savonin <dmitry@fluentlabs.xyz>"]
publish = true

[dependencies]
wasmparser = { version = "0.100.1", package = "wasmparser-nostd", default-features = false }
hashbrown = { version = "0.15.2", features = ["alloc"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
paste = { version = "1.0", default-features = false }
bytes = { version = "1.10.1", default-features = false }
downcast-rs = { version = "2.0.1", default-features = false, features = ["sync"] }
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "derive"] }
num-traits = { version = "0.2", default-features = false }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
libm = "0.2.1"
smallvec = "1.15.0"
num-derive = "0.4.2"
spin = "0.10.0"

# tracing
serde = { version = "1.0.219", features = ["derive", "rc"], optional = true }

# wasmtime
wasmtime = { git = "https://github.com/fluentlabs-xyz/wasmtime", branch = "v41-patched", optional = true, features = ["cache"] }
directories = { version = "6.0.0", optional = true }
lru = { version = "0.16.3", optional = true }
anyhow = { version = "1.0.98", optional = true }

# rwasm fuel policy
rwasm-fuel-policy = { git = "https://github.com/fluentlabs-xyz/rwasm-fuel-policy.git", branch = "main", default-features = false }

[dev-dependencies]
rand = "=0.9.1"
wat = "1.243.0"
hex-literal = "1.0.0"
hex = "0.4.3"
criterion = { version = "0.7.0", default-features = false, features = [] }
fib-example = { path = "examples/fib" }

[features]
default = ["std", "wasmtime"]
std = [
    "bytes/std",
    "bincode/std",
    "num-traits/std",
    "bitvec/std",
    "wasmtime?/std",
]
serde = [
    "dep:serde", "serde/derive"
]
tracing = ["serde"]
debug-print = []
fpu = []
wasmtime = ["dep:wasmtime", "dep:lru", "dep:anyhow"]
cache-compiled-artifacts = ["wasmtime", "dep:directories"]
e2e = []
pooling-allocator = []

[[bench]]
name = "bench"
harness = false