[package]
name = "fib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false
rpath = false
codegen-units = 1

[dependencies]
criterion = { version = "0.7.0", default-features = false, features = [] }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
fnv = { version = "1.0.7", default-features = false }

[dev-dependencies]
rwasm = { path = "..", features = ["std", "wasmtime"] }
rand = { version = "0.9.2" }
wat = "1.230.0"

[[bench]]
name = "bench"
harness = false
