[package]
name = "fib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false
rpath = false
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false, features = [] }
rwasm = { path = "..", features = ["std", "wasmtime"] }
rand = { version = "0.9.2" }
wat = "1.230.0"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
revm-interpreter = "25.0.3"
revm-bytecode = "6.2.2"
hex-literal = "1.0.0"

[[bench]]
name = "bitvec"
harness = false

[[bench]]
name = "fib32"
harness = false

[[bench]]
name = "fib64"
harness = false
