[package]
name = "fib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false
rpath = false
codegen-units = 1

[dependencies]
criterion = { version = "0.7.0", default-features = false, features = [] }

[dev-dependencies]
rwasm = { path = "..", package = "fluent-rwasm", features = ["std", "wasmtime"] }

[[bench]]
name = "bench"
harness = false
