[package]
name = "rwasm-codegen"
version = "0.30.0"
documentation = ""
description = "rwasm"
edition = "2021"

[dependencies]
rwasm = { path = "../rwasm", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
## strum is used only with test cfg
strum = { version = "0.25.0", optional = true }
strum_macros = { version = "0.25.1", optional = true }

[dev-dependencies]
wat = { version = "1" }
fluentbase-runtime = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel" }

[features]
default = ["std"]
std = ["rwasm/std", "byteorder/std", "dep:strum", "dep:strum_macros"]
e2e = []
