[package]
name = "rwasm-codegen"
version = "0.30.0"
documentation = ""
description = "rwasm"
edition = "2021"

[dependencies]
rwasm = { path = "../rwasm", default-features = false }
fluentbase-types = { path = "../../fluentbase/crates/types", default-features = false }
#fluentbase-types = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false }
byteorder = { workspace = true }
## strum is used only with test cfg
strum = { version = "0.25.0", optional = true }
strum_macros = { version = "0.25.1", optional = true }

[dev-dependencies]
wat = "1"

[features]
default = ["std"]
std = ["rwasm/std", "byteorder/std", "dep:strum", "dep:strum_macros"]
e2e = []