[package]
name = "rwasm-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
rwasm = { path = "..", package = "fluent-rwasm", features = ["fpu"] }
anyhow = "1.0.71"
wast = "=64.0"

[features]
default = ["std"]
std = ["rwasm/std"]
debug-print = ["rwasm/debug-print"]
wasmtime = ["rwasm/wasmtime"]
unix-memory = ["rwasm/unix-memory"]
