[package]
name = "rwasm-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
rwasm = { path = "..", features = ["std", "fpu", "wasmtime", "e2e"], default-features = false }
wasmtime = { git = "https://github.com/fluentlabs-xyz/wasmtime", branch = "v41-patched", optional = true, features = ["cache"] }
anyhow = "1.0.71"
wast = "=64.0"
lazy_static = "1.5.0"

[features]
default = ["wasmtime"]
wasmtime = ["dep:wasmtime"]
all-engine = ["wasmtime"]
debug-print = ["rwasm/debug-print"]

#[patch."https://github.com/fluentlabs-xyz/wasmtime"]
#wasmtime = { path = "../../wasmtime/crates/wasmtime", optional = true, features = ["disable-fpu", "cache"] }
