[package]
name = "rwasm-executor"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hashbrown = { workspace = true }
tiny-keccak = { workspace = true }
byteorder = { workspace = true }
num_enum = { workspace = true }
paste = { workspace = true }
bytes = { workspace = true }

rwasm = { path = "../rwasm" }

[features]
default = ["std", "bytes/std"]
std = []
tracer = []
e2e = []
debug-print = ["std"]
floats = []
