[package]
name = "perf"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-C", "force-frame-pointers=yes"]

[[bin]]
name = "fibonacci_perf"
path = "fibonacci_perf.rs"

[[bin]]
name = "load_perf"
path = "load_perf.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = 0
strip = false
debug = true
debug-assertions = true
rpath = true
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true
strip = false
codegen-units = 256
rpath = true

[dependencies]
rwasm = { path = "..", features = [
    "std",
    "wasmtime",
] }
wat = "1.230.0"

[dev-dependencies]


