[package]
name = "rwasm_optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false, features = ["evm"] }
#fluentbase-sdk = { path="../../fluentbase/crates/sdk", default-features = false, features = ["evm"] }
rwasm-codegen = { path = "../codegen", default-features = false, features = [] }
rwasm = { path = "../rwasm", default-features = false, features = ["sdk"] }
#rwasm-codegen = { git = "https://github.com/fluentlabs-xyz/rwasm", branch = "devel", default-features = false }
#lol_alloc = "0.4.0"

[dev-dependencies]
wat = { version = "1" }
fluentbase-runtime = { workspace = true }
#fluentbase-runtime = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
std = ["fluentbase-sdk/runtime", "rwasm-codegen/std", "rwasm/std"]
e2e = []

[profile.release]
#strip = false
