[package]
name = "nitro-verifier"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false, features = ["debug-print", "fast-panic"] }
coset = { version = "0.3.8", default-features = false }
ciborium = { version = "^0.2.1", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = ["pem"] }
der = { version = "0.7.9", default-features = false, features = ["alloc"] }
ecdsa = { version = "0.16.9", default-features = false, features = [
    "digest",
    "alloc",
    "der",
] }
p384 = { version = "0.13.0", default-features = false, features = [
    "ecdsa-core",
    "ecdsa",
] }
hex = "0.4.3"

[dev-dependencies]
fluentbase-sdk-testing = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false, features = ["debug-print"] }

[build-dependencies]
fluentbase-build = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false }

[features]
default = ["std"]
std = []